@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2023-09-28T01:16:04Z",
+  "timestamp" : "2023-09-28T08:22:27Z",
   "count_outdated" : 508,
   "uniques_outdated" : 242,
-  "count" : 530,
-  "uniques" : 252,
+  "count" : 531,
+  "uniques" : 253,
   "clones" : [
     {
       "timestamp": "2023-09-17T00:00:00Z",
@@ -91,6 +91,15 @@
       "count": 2,
       "count_minmax": [ 1, 2 ],
       "count_decinc": [ 0, 2 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2023-09-28T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
