@@ -1,3 +1,12 @@
+2023-09-28T08:22:27Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6336372284 # 815
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2023-09-28
+* notice: last 14d: unq all: 1 23
+* notice: prev accum: outdated-unq outdated-all / unq all: 242 508 / 252 530
+* notice: next accum: outdated-unq outdated-all / unq all: 242 508 / 253 531
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [] / [2023-09-28]
+
 2023-09-28T01:16:04Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6333321758 # 814
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2023-09-28
